Fix using_high_res_timer in GPU watchdog

This should probably be measuring whether base::TimeTicks is high-res.

Bug: 736490
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I18069a9f4f4d139648fa5be7ce940263038204d8
Reviewed-on: https://chromium-review.googlesource.com/601250
Reviewed-by: Stanislav Chiknavaryan <stanisc@chromium.org>
Commit-Queue: John Bauman <jbauman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492154}
Former-commit-id: 82bd1928e0d3dd5d79b3c1e3c1656c1d43a44deb